fix z-index and server

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -135,12 +135,11 @@ html, body
   visibility hidden
   transform translateY(100%)
   transition transform 500ms ease, opacity 500ms ease, visibility 500ms ease
-  z-index -1
+  z-index 8
   .openArticle &
     transform translateY(0%)
     opacity 1
     visibility visible
-    z-index 8
 
 
 
